--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ GEMINI_API_KEY=your_gemini_api_key_here
 
 # Server Port
 PORT=3000
+
+# Environment (development or production)
+NODE_ENV=development
+
+# Frontend URL (for CORS in production)
+FRONTEND_URL=https://your-app.onrender.com
